--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Personal
+NightscoutKitTests/Fixtures/myNightscoutURL
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
