--- a/.gitignore
+++ b/.gitignore
@@ -54,10 +54,10 @@ playground.xcworkspace
 
 # Carthage
 #
-# Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
-
-Carthage/Build
+Carthage/Checkouts/
+Carthage/Build/tvOS/
+Carthage/Build/iOS/*.bcsymbolmap
+Carthage/Build/iOS/*.dSYM
 
 # fastlane
 #
