--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
-#xcode_project: NightscoutKit.xcodeproj
+xcode_project: NightscoutKit.xcodeproj
 xcode_scheme: NightscoutKitTests
