--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
 language: objective-c
+osx_image: xcode9.2
+xcode_sdk: iphonesimulator11
 xcode_project: NightscoutKit.xcodeproj
-xcode_scheme: NightscoutKitTests
+xcode_scheme: NightscoutKit
