Cross-platform support

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: objective-c
 osx_image: xcode9.2
 script:
-- xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit -sdk iphonesimulator11.2 build -destination name="iPhone SE" test
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-iOS test
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-macOS 
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-watchOS
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-tvOS
+  - swift test
