--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: objective-c
 osx_image: xcode9.3
 script:
-  - xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-iOS -sdk iphonesimulator11.3 build -destination name="iPhone SE" test
+  - xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-iOS -sdk iphonesimulator11.3 build -destination name="iPhone 8" test
   - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-macOS 
-  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-watchOS
-  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-tvOS
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-watchOS -destination name="Apple Watch Series 3 - 42mm"
+  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-tvOS -destination name="Apple TV"
   - swift build -Xswiftc "-target" -Xswiftc "x86_64-apple-macosx10.12"
