--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: objective-c
-osx_image: xcode9.3
+osx_image: xcode10
+
+env:
+  - ACTION=build  PLATFORM=Mac     DESTINATION='platform=OS X'
+  - ACTION=test  PLATFORM=iOS     DESTINATION='platform=iOS Simulator,name=iPhone 8'
+  - ACTION=build PLATFORM=watchOS DESTINATION='platform=watchOS Simulator,name=Apple Watch - 38mm'
+  - ACTION=build  PLATFORM=tvOS    DESTINATION='platform=tvOS Simulator,name=Apple TV 1080p'
+
+install:
+  - test -f Cartfile* && carthage bootstrap --platform $PLATFORM
+
 script:
-  - xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-iOS -sdk iphonesimulator11.3 build -destination name="iPhone 8" test
-  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-macOS 
-  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-watchOS -destination name="Apple Watch Series 3 - 42mm"
-  - xcrun xcodebuild -project NightscoutKit.xcodeproj -scheme NightscoutKit-tvOS -destination name="Apple TV"
-  - swift build -Xswiftc "-target" -Xswiftc "x86_64-apple-macosx10.12"
+  - set -o pipefail && xcodebuild -scheme NightscoutKit -destination "$DESTINATION" $ACTION | xcpretty
